# opt_arrayvec

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: array_deref.rs  impls.rs  into_iterator_impl.rs  iterator_impl.rs  lib.rs  macro_builder.rs  trait_impl.rs
util/: pre-commit
