[package]
name = "opt_arrayvec"
version = "0.1.0"
edition = "2021"
description = "Vector-like container with fixed capacity, using options instead of stored length"
license = "MIT"
authors = ["FlareFlo"]
repository = "https://github.com/FlareFlo/opt_arrayvec"
documentation = "https://docs.rs/opt_arrayvec"
rust-version = "1.65"
keywords = ["stack", "vector", "array", "data-structure"]
categories = ["data-structures"]

[features]
default = ["std"]
std = []

[dependencies]
